fix(frontend): Favorites are hard to read due to new font size

--- a/frontend/src/component/ContentListItem.styl
+++ b/frontend/src/component/ContentListItem.styl
@@ -9,6 +9,9 @@
   color fontColor
   height 60px
   align-items center
+  min-height 65px
+  & > *
+    margin 0 8px
   &:hover
     color fontColor
   &__link
