--- a/frontend/src/css/Favorites.styl
+++ b/frontend/src/css/Favorites.styl
@@ -7,7 +7,8 @@
   height 60px
   justify-content space-between
   align-items center
-
+  & > *
+    margin 0 8px
   &__type
     width 75px
     text-align center
